feat: mudança de cor para ideia da empresa e aplicado logica de aviso e arumado qr code no front
